--- a/.github/workflows/generate-readmes.yml
+++ b/.github/workflows/generate-readmes.yml
@@ -34,12 +34,13 @@ jobs:
           import os
           import urllib.parse
           import yaml
-          import datetime
+          
+          # --- 0. 防止 !include 等标签报错 ---
+          yaml.add_multi_constructor("!", lambda loader, suffix, node: None, Loader=yaml.SafeLoader)
 
           # --- 配置区域 ---
           REPO_URL = "https://github.com/${{ github.repository }}/blob/main"
           
-          # 文件夹显示名称映射
           DIR_MAP = {
               "Official_Examples": "Mihomo 官方示例 (Official)",
               "General_Config": "通用进阶配置 (General Config)",
@@ -47,7 +48,6 @@ jobs:
               "Mobile_Modules": "Android 手机模块 (Mobile Modules)"
           }
 
-          # 忽略的文件
           IGNORE_DIRS = [".git", ".github"]
           IGNORE_FILES = ["README.md", "LICENSE", "release_body.md"]
 
@@ -69,86 +69,149 @@ jobs:
                   return f"{size/1024:.1f} KB"
               except: return "Unknown"
 
-          def analyze_single_config(file_path):
-              """解析单个 YAML 并返回结构化数据"""
+          def read_file_content(file_path):
+              # 尝试读取文件内容
+              content = ""
               try:
                   with open(file_path, "r", encoding="utf-8") as f:
-                      data = yaml.safe_load(f)
-                      
-                  # 基础指标提取
+                      content = f.read()
+              except UnicodeDecodeError:
+                  try:
+                      with open(file_path, "r", encoding="gb18030", errors="ignore") as f:
+                          content = f.read()
+                  except Exception:
+                      return None
+              if "\t" in content:
+                  content = content.replace("\t", "  ")
+              return content
+
+          def analyze_single_config(file_path):
+              # 解析单个 YAML
+              try:
+                  raw_content = read_file_content(file_path)
+                  if not raw_content: return None
+                  data = yaml.safe_load(raw_content)
+                  if not isinstance(data, dict): return None
+
                   info = {}
-                  info["mixed_port"] = safe_get(data, ["mixed-port"], "❌")
-                  info["http_port"] = safe_get(data, ["port"], "❌")
+                  
+                  # 1. 基础信息
                   info["mode"] = safe_get(data, ["mode"], "Rule")
                   info["ipv6"] = "✅" if str(safe_get(data, ["ipv6"])).lower() == "true" else "🚫"
                   info["allow_lan"] = "✅" if str(safe_get(data, ["allow-lan"])).lower() == "true" else "🚫"
-                  
-                  # 进阶指标
                   info["tun"] = "✅ 开启" if safe_get(data, ["tun", "enable"], False) else "🚫 关闭"
+
+                  # 2. 端口扫描 (Port Scanning)
+                  # 提取主要端口
+                  info["port_mixed"] = safe_get(data, ["mixed-port"], "-")
+                  info["port_ctrl"] = safe_get(data, ["external-controller"], "-")
                   
-                  # 数量统计
+                  # 构建详细端口列表 (用于详情页)
+                  # 逻辑：只要有值且不是 - 或 0，就加入显示列表
+                  ports_list = []
+                  
+                  # 检查 Mixed Port
+                  p_mix = data.get("mixed-port")
+                  if p_mix: ports_list.append(f"| Mixed (混合) | {p_mix} | HTTP/SOCKS |")
+
+                  # 检查 Port (HTTP)
+                  p_http = data.get("port")
+                  if p_http: ports_list.append(f"| HTTP | {p_http} | 仅 HTTP |")
+
+                  # 检查 Socks Port
+                  p_socks = data.get("socks-port")
+                  if p_socks: ports_list.append(f"| SOCKS5 | {p_socks} | 仅 SOCKS |")
+                  
+                  # 检查 TProxy
+                  p_tproxy = data.get("tproxy-port")
+                  if p_tproxy: ports_list.append(f"| TProxy | {p_tproxy} | 透明代理 (UDP) |")
+                  
+                  # 检查 Redir
+                  p_redir = data.get("redir-port")
+                  if p_redir: ports_list.append(f"| Redirect | {p_redir} | 透明代理 (TCP) |")
+
+                  # 检查 Controller
+                  p_ctrl = data.get("external-controller")
+                  if p_ctrl: ports_list.append(f"| Controller | {p_ctrl} | 控制面板 |")
+
+                  # 3. Listeners 监听器检测
+                  listeners = data.get("listeners", [])
+                  if listeners and isinstance(listeners, list):
+                      for l in listeners:
+                          if isinstance(l, dict):
+                              name = l.get("name", "Unknown")
+                              port = l.get("port", "?")
+                              l_type = l.get("type", "mixed")
+                              ports_list.append(f"| 👂 {name} | {port} | {l_type} |")
+                  
+                  # 将整理好的端口列表存入 info
+                  info["ports_display_lines"] = ports_list
+
+                  # 4. 统计信息
                   groups = data.get("proxy-groups", [])
-                  info["group_count"] = len(groups) if groups else 0
+                  info["group_count"] = len(groups) if isinstance(groups, list) else 0
                   
                   rules = data.get("rules", [])
-                  info["rule_count"] = len(rules) if rules else 0
+                  info["rule_count"] = len(rules) if isinstance(rules, list) else 0
                   
-                  # 策略组详情 (用于生成详细报告)
+                  # 5. 详情提取
                   info["groups_raw"] = []
-                  for pg in groups:
-                      name = pg.get("name", "Unknown")
-                      type_ = pg.get("type", "select")
-                      icon = "🚀"
-                      if "auto" in type_ or "url-test" in type_: icon = "♻️"
-                      elif "fallback" in type_: icon = "🔧"
-                      elif "load-balance" in type_: icon = "⚖️"
-                      elif "select" in type_: icon = "👆"
-                      info["groups_raw"].append(f"| {icon} {name} | `{type_}` |")
+                  if isinstance(groups, list):
+                      for pg in groups:
+                          if isinstance(pg, dict):
+                              name = pg.get("name", "Unknown")
+                              type_ = pg.get("type", "select")
+                              icon = "🚀"
+                              if "auto" in type_ or "url-test" in type_: icon = "♻️"
+                              elif "fallback" in type_: icon = "🔧"
+                              elif "load-balance" in type_: icon = "⚖️"
+                              elif "select" in type_: icon = "👆"
+                              info["groups_raw"].append(f"| {icon} {name} | `{type_}` |")
 
-                  # DNS 详情
                   info["dns_raw"] = []
                   dns = data.get("dns", {})
-                  if dns.get("enable", False):
-                      for ns in dns.get("nameserver", []):
-                          if isinstance(ns, str):
-                              provider = "DoT" if "tls://" in ns else "DoH" if "https://" in ns else "UDP"
-                              info["dns_raw"].append(f"| {provider} | `{ns}` |")
+                  if isinstance(dns, dict) and dns.get("enable", False):
+                      nameservers = dns.get("nameserver", [])
+                      if isinstance(nameservers, list):
+                          for ns in nameservers:
+                              if isinstance(ns, str):
+                                  provider = "DoT" if "tls://" in ns else "DoH" if "https://" in ns else "UDP"
+                                  info["dns_raw"].append(f"| {provider} | `{ns}` |")
                   
                   return info
               except Exception as e:
                   return None
 
           def generate_comparison_table(configs_data):
-              """生成横向对比表格"""
-              # 表头
-              headers = ["特性 / 文件", "大小 (Size)"] 
+              # 生成横向对比表格
+              
+              # 修改点1：表头删除了“大小”列，只保留文件名
+              headers = ["特性 / 文件"] 
               for filename in configs_data.keys():
                   headers.append(f"`{filename}`")
               
               lines = []
               lines.append("| " + " | ".join(headers) + " |")
-              lines.append("| :--- | :--- " + "| :--- " * len(configs_data) + "|")
+              lines.append("| :--- " + "| :--- " * len(configs_data) + "|")
               
+              # 修改点2：将文件大小作为第一行数据展示
+              size_row = ["**文件大小**"]
+              for filename, data in configs_data.items():
+                  size_row.append(data.get("file_size", "N/A"))
+              lines.append("| " + " | ".join(size_row) + " |")
+
               # 定义要对比的行
               rows = [
-                  ("mixed_port", "混合端口"),
+                  ("port_mixed", "混合端口"),
+                  ("port_ctrl", "控制面板"),
                   ("mode", "运行模式"),
                   ("tun", "TUN 模式"),
-                  ("ipv6", "IPv6"),
-                  ("allow_lan", "允许局域网"),
-                  ("group_count", "策略组数量"),
+                  ("group_count", "策略组数"),
                   ("rule_count", "规则条数"),
               ]
 
-              # 填充第一行：文件大小
-              size_row = ["**文件大小**", "-"]
-              for filename, data in configs_data.items():
-                  size_row.append(data["file_size"])
-              lines.append("| " + " | ".join(size_row) + " |")
-
-              # 填充其他特性行
               for key, label in rows:
-                  row_content = [f"**{label}**", "-"]
+                  row_content = [f"**{label}**"]
                   for filename, data in configs_data.items():
                       val = data.get("parsed", {}).get(key, "N/A")
                       if key in ["group_count", "rule_count"]:
@@ -163,32 +226,26 @@ jobs:
               folder_name = os.path.basename(root_path)
               title = DIR_MAP.get(folder_name, folder_name)
 
-              # 1. 扫描并解析所有 YAML
               configs_data = {} 
-              valid_yaml_files = []
               
               for f in sorted(files):
                   if f.lower().endswith((".yaml", ".yml")) and f not in IGNORE_FILES:
                       full_path = os.path.join(root_path, f)
                       parsed_info = analyze_single_config(full_path)
                       
-                      if parsed_info and (parsed_info["group_count"] > 0 or parsed_info["rule_count"] > 0):
+                      if parsed_info:
                           configs_data[f] = {
                               "file_size": get_file_size(full_path),
                               "parsed": parsed_info
                           }
-                          valid_yaml_files.append(f)
 
-              # --- 开始构建 Markdown ---
               content = []
               content.append(f"# 📂 {title}\n")
               
               depth = rel_path.count(os.sep) + 1
               back_link = "../" * depth + "README.md"
               content.append(f"[🔙 返回主页 (Return to Home)]({back_link})\n")
-
               content.append("> 🤖 **自动分析报告** | Auto-generated Report\n")
-              content.append(f"> 本目录包含 **{len(valid_yaml_files)}** 个主要配置文件。\n")
 
               if len(configs_data) > 1:
                   content.append("## ⚔️ 配置横向对比 (Comparison)\n")
@@ -198,30 +255,46 @@ jobs:
               if configs_data:
                   content.append("## 📄 配置文件详解 (Details)\n")
                   for filename, data in configs_data.items():
-                      info = data["parsed"]
+                      info = data.get("parsed", {})
                       file_url = f"{REPO_URL}/{urllib.parse.quote(rel_path)}/{urllib.parse.quote(filename)}"
                       
                       content.append(f"### 📝 {filename}")
-                      # --- 修复点：这里加上了引号 ---
-                      content.append(f"- **大小**: {data["file_size"]}") 
+                      content.append(f"- **大小**: {data.get("file_size", "N/A")}")
                       content.append(f"- **链接**: [查看源码]({file_url})")
+
+                      # 修改点3：端口和监听器显示逻辑
+                      # 获取之前收集的端口列表
+                      port_lines = info.get("ports_display_lines", [])
                       
-                      if info["groups_raw"]:
-                          content.append(f"\n<details>")
-                          content.append(f"<summary><b>🔎 点击查看策略组架构 ({info["group_count"]}个)</b></summary>\n")
+                      # 只有列表不为空（即存在端口或监听）才输出表格
+                      if port_lines:
+                          content.append(f"\n#### 📶 网络端口配置 (Ports)")
+                          content.append("| 类型 | 端口/地址 | 说明 |")
+                          content.append("| :--- | :--- | :--- |")
+                          for line in port_lines:
+                              content.append(line)
+                          content.append("\n")
+                      # 如果 port_lines 为空，这里什么都不做，相当于输出为空
+
+                      groups_raw = info.get("groups_raw", [])
+                      if groups_raw:
+                          group_count = info.get("group_count", 0)
+                          content.append(f"<details>")
+                          content.append(f"<summary><b>🔎 点击查看策略组架构 ({group_count}个)</b></summary>\n")
                           content.append("| 策略组 (Group) | 类型 (Type) |")
                           content.append("| :--- | :--- |")
-                          content.extend(info["groups_raw"][:15])
-                          if len(info["groups_raw"]) > 15:
-                              content.append(f"| ... | 还有 {len(info["groups_raw"])-15} 个 |")
+                          content.extend(groups_raw[:15])
+                          if len(groups_raw) > 15:
+                              content.append(f"| ... | 还有 {len(groups_raw)-15} 个 |")
                           content.append(f"\n</details>\n")
                       
-                      if info["dns_raw"]:
-                          content.append(f"\n<details>")
+                      dns_raw = info.get("dns_raw", [])
+                      if dns_raw:
+                          content.append(f"<details>")
                           content.append(f"<summary><b>🌐 点击查看 DNS 配置</b></summary>\n")
                           content.append("| 类型 | 服务器 |")
                           content.append("| :--- | :--- |")
-                          content.extend(info["dns_raw"])
+                          content.extend(dns_raw)
                           content.append(f"\n</details>\n")
                       
                       content.append("\n---\n")
@@ -240,11 +313,10 @@ jobs:
           print("Starting Comparison README generation...")
           for root, dirs, files in os.walk("."):
               dirs[:] = [d for d in dirs if d not in IGNORE_DIRS]
-              
               rel_path = os.path.relpath(root, ".")
               if rel_path == ".": continue
-
-              if len([f for f in files if f not in IGNORE_FILES]) > 0:
+              
+              if len([f for f in files if f not in IGNORE_FILES and f.endswith((".yaml", ".yml"))]) > 0:
                   readme_txt = generate_readme(root, files)
                   with open(os.path.join(root, "README.md"), "w", encoding="utf-8") as f:
                       f.write(readme_txt)
@@ -257,6 +329,6 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git add */**/README.md
-          git commit -m "Docs: Auto-generate config comparison tables" || echo "No changes to commit"
+          git commit -m "Docs: Auto update READMEs with ports info" || echo "No changes to commit"
           
           git push origin HEAD:${{ github.ref_name }}
