--- a/.github/workflows/update-core.yml
+++ b/.github/workflows/update-core.yml
@@ -45,7 +45,6 @@ jobs:
           version=$(curl -sSL https://raw.githubusercontent.com/actions/go-versions/update-versions-manifest-file/versions-manifest.json | \
                     jq -r '.[0].version')
           echo "version=${version}" >> $GITHUB_OUTPUT
-          echo "✅ Go版本: ${version}"
 
   # ========================================================================
   # sing-box版本检测
@@ -76,40 +75,38 @@ jobs:
       sagernet_dev_skip: ${{ steps.compare.outputs.sagernet_dev_skip }}
     
     steps:
-      - name: 检测所有版本
+      - name: 检测sing-box版本
         id: versions
         run: |
-          # === reF1nd-main ===
+          # reF1nd-main
           git clone --depth=1 --branch=reF1nd-main https://github.com/reF1nd/sing-box.git /tmp/ref1nd-main 2>/dev/null || true
           if [[ -d /tmp/ref1nd-main ]]; then
             cd /tmp/ref1nd-main
-            REF1ND_MAIN_VER=$(git tag -l --sort=-v:refname 2>/dev/null | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+.*-reF1nd' | head -n1 | sed 's/^v//')
+            REF1ND_MAIN_VER=$(git tag -l --sort=-v:refname | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+.*-reF1nd' | head -n1 | sed 's/^v//')
           else
             REF1ND_MAIN_VER="unknown"
           fi
           echo "ref1nd_main_version=${REF1ND_MAIN_VER}" >> $GITHUB_OUTPUT
           echo "ref1nd_main_tags=with_gvisor,with_quic,with_dhcp,with_utls,with_clash_api" >> $GITHUB_OUTPUT
           
-          # === reF1nd-dev ===
+          # reF1nd-dev
           git clone --depth=1 --branch=reF1nd-dev https://github.com/reF1nd/sing-box.git /tmp/ref1nd-dev 2>/dev/null || true
           if [[ -d /tmp/ref1nd-dev ]]; then
             cd /tmp/ref1nd-dev
-            REF1ND_DEV_VER=$(git tag -l --sort=-v:refname 2>/dev/null | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+.*(alpha|beta|rc).*-reF1nd' | head -n1 | sed 's/^v//')
+            REF1ND_DEV_VER=$(git tag -l --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+.*(alpha|beta|rc).*-reF1nd' | head -n1 | sed 's/^v//')
           else
             REF1ND_DEV_VER="unknown"
           fi
           echo "ref1nd_dev_version=${REF1ND_DEV_VER}" >> $GITHUB_OUTPUT
           echo "ref1nd_dev_tags=with_gvisor,with_quic,with_dhcp,with_utls,with_clash_api" >> $GITHUB_OUTPUT
           
-          # === SagerNet-release ===
-          SAGERNET_REL_API=$(curl -sSL https://api.github.com/repos/SagerNet/sing-box/releases/latest)
-          SAGERNET_REL_VER=$(echo "$SAGERNET_REL_API" | jq -r '.tag_name' | sed 's/^v//')
+          # SagerNet-release
+          SAGERNET_REL_VER=$(curl -sSL https://api.github.com/repos/SagerNet/sing-box/releases/latest | jq -r '.tag_name' | sed 's/^v//')
           echo "sagernet_release_version=${SAGERNET_REL_VER}" >> $GITHUB_OUTPUT
           echo "sagernet_release_tags=with_gvisor,with_quic,with_dhcp,with_utls,with_clash_api" >> $GITHUB_OUTPUT
           
-          # === SagerNet-dev ===
-          SAGERNET_DEV_API=$(curl -sSL https://api.github.com/repos/SagerNet/sing-box/releases)
-          SAGERNET_DEV_VER=$(echo "$SAGERNET_DEV_API" | jq -r '[.[] | select(.prerelease==true)][0].tag_name' | sed 's/^v//')
+          # SagerNet-dev
+          SAGERNET_DEV_VER=$(curl -sSL https://api.github.com/repos/SagerNet/sing-box/releases | jq -r '[.[] | select(.prerelease==true)][0].tag_name' | sed 's/^v//')
           echo "sagernet_dev_version=${SAGERNET_DEV_VER}" >> $GITHUB_OUTPUT
           echo "sagernet_dev_tags=with_gvisor,with_quic,with_dhcp,with_utls,with_clash_api" >> $GITHUB_OUTPUT
 
@@ -129,7 +126,7 @@ jobs:
           fi
 
   # ========================================================================
-  # mihomo版本检测 (修复Alpha和Smart)
+  # mihomo版本检测 (已修复: 使用version.txt获取准确版本)
   # ========================================================================
   check-mihomo:
     name: 检测mihomo版本
@@ -154,59 +151,45 @@ jobs:
         id: versions
         run: |
           # ---------------------------------------------------
-          # 1. Meta (正式版) - 获取 Latest
+          # 1. Meta (正式版) - Latest
           # ---------------------------------------------------
-          META_API=$(curl -sSL https://api.github.com/repos/MetaCubeX/mihomo/releases/latest)
-          META_VER=$(echo "$META_API" | jq -r '.tag_name')
-          
+          META_VER=$(curl -sSL https://api.github.com/repos/MetaCubeX/mihomo/releases/latest | jq -r '.tag_name')
           if [[ "$META_VER" != "null" && -n "$META_VER" ]]; then
              echo "meta_version=${META_VER}" >> $GITHUB_OUTPUT
              echo "meta_skip=false" >> $GITHUB_OUTPUT
              echo "✅ Meta Release: ${META_VER}"
           else
              echo "meta_skip=true" >> $GITHUB_OUTPUT
-             echo "⚠️ Meta Release check failed."
           fi
           
           # ---------------------------------------------------
           # 2. Alpha (MetaCubeX) - Prerelease-Alpha
           # ---------------------------------------------------
-          ALPHA_API=$(curl -sSL https://api.github.com/repos/MetaCubeX/mihomo/releases/tags/Prerelease-Alpha)
+          # 直接获取 version.txt 内容作为版本号
+          ALPHA_VER=$(curl -sSL https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/version.txt | tr -d '[:space:]')
           
-          if [[ $(echo "$ALPHA_API" | jq -r '.tag_name') == "Prerelease-Alpha" ]]; then
-            # 关键修复：下载脚本硬编码了URL为Prerelease-Alpha，但文件名需要具体的版本号
-            # 我们从 assets 中解析真实的文件名版本后缀 (例如: alpha-c0de123)
-            # 查找 mihomo-linux-amd64-{version}.gz
-            REAL_VERSION=$(echo "$ALPHA_API" | jq -r '.assets[] | select(.name | contains("linux-amd64-alpha")) | .name' | head -n1 | sed 's/mihomo-linux-amd64-//;s/\.gz//')
-            
-            if [[ -z "$REAL_VERSION" ]]; then
-               # 如果解析失败，回退到 Prerelease-Alpha
-               REAL_VERSION="Prerelease-Alpha"
-            fi
-            
-            echo "alpha_version=${REAL_VERSION}" >> $GITHUB_OUTPUT
+          if [[ -n "$ALPHA_VER" ]]; then
+            echo "alpha_version=${ALPHA_VER}" >> $GITHUB_OUTPUT
             echo "alpha_skip=false" >> $GITHUB_OUTPUT
-            echo "✅ Meta Alpha: ${REAL_VERSION} (Tag: Prerelease-Alpha)"
+            echo "✅ Meta Alpha: ${ALPHA_VER}"
           else
             echo "alpha_skip=true" >> $GITHUB_OUTPUT
-            echo "⚠️ Meta Alpha check failed."
+            echo "⚠️ Meta Alpha check failed (version.txt empty)"
           fi
           
           # ---------------------------------------------------
           # 3. Smart (Vernesong) - Prerelease-Alpha
           # ---------------------------------------------------
-          SMART_API=$(curl -sSL https://api.github.com/repos/vernesong/mihomo/releases/tags/Prerelease-Alpha)
-          SMART_TAG=$(echo "$SMART_API" | jq -r '.tag_name')
+          # 直接获取 version.txt 内容
+          SMART_VER=$(curl -sSL https://github.com/vernesong/mihomo/releases/download/Prerelease-Alpha/version.txt | tr -d '[:space:]')
 
-          if [[ "$SMART_TAG" == "Prerelease-Alpha" ]]; then
-            # 这里的下载脚本逻辑是: URL = .../download/${version}
-            # 所以为了能请求到正确的URL，版本必须是 Tag 名
-            echo "smart_version=${SMART_TAG}" >> $GITHUB_OUTPUT
+          if [[ -n "$SMART_VER" ]]; then
+            echo "smart_version=${SMART_VER}" >> $GITHUB_OUTPUT
             echo "smart_skip=false" >> $GITHUB_OUTPUT
-            echo "✅ Smart Alpha: ${SMART_TAG}"
+            echo "✅ Smart Alpha: ${SMART_VER}"
           else
             echo "smart_skip=true" >> $GITHUB_OUTPUT
-            echo "⚠️ Smart Alpha check failed."
+            echo "⚠️ Smart Alpha check failed (version.txt empty)"
           fi
 
   # ========================================================================
@@ -261,7 +244,7 @@ jobs:
       go_version: ${{ needs.prepare.outputs.go_version }}
 
   # ========================================================================
-  # mihomo下载任务
+  # mihomo下载任务 (Alpha和Smart现已使用version.txt的准确版本)
   # ========================================================================
   download-mihomo-meta:
     name: 下载mihomo Meta
@@ -281,7 +264,6 @@ jobs:
     with:
       project: mihomo
       variant: alpha
-      # 这里传递的是实际的文件版本后缀 (e.g., alpha-xxx)，因为脚本已经硬编码了URL
       version: ${{ needs.check-mihomo.outputs.alpha_version }}
   
   download-mihomo-smart:
@@ -292,7 +274,6 @@ jobs:
     with:
       project: mihomo
       variant: smart
-      # 这里传递的是 Tag 名 (Prerelease-Alpha)，因为脚本用它拼接URL
       version: ${{ needs.check-mihomo.outputs.smart_version }}
 
   # ========================================================================
@@ -334,100 +315,62 @@ jobs:
         run: |
           mkdir -p ./publish
           
-          prepare_dir() {
-            mkdir -p "./publish/$1"
-          }
+          prepare_dir() { mkdir -p "./publish/$1"; }
           
-          # sing-box 目录
           prepare_dir "sing-box/reF1nd/main"
           prepare_dir "sing-box/reF1nd/dev"
           prepare_dir "sing-box/SagerNet/release"
           prepare_dir "sing-box/SagerNet/dev"
-          # mihomo 目录
           prepare_dir "mihomo/MetaCubeX/meta"
           prepare_dir "mihomo/MetaCubeX/alpha"
           prepare_dir "mihomo/vernesong/smart"
 
-          echo "开始整理 sing-box..."
+          echo "处理 sing-box 产物..."
           for file in ./artifacts/sing-box-*; do
             [[ -f "$file" ]] || continue
             filename=$(basename "$file")
-            
             if [[ "$filename" =~ sing-box-([^-]+-[^-]+)-(.+)\.(tar\.gz|upx|exe) ]]; then
               variant="${BASH_REMATCH[1]}"
               platform="${BASH_REMATCH[2]}"
-              
-              target_base=""
               case "$variant" in
-                ref1nd-main)      target_base="sing-box/reF1nd/main" ;;
-                ref1nd-dev)       target_base="sing-box/reF1nd/dev" ;;
-                sagernet-release) target_base="sing-box/SagerNet/release" ;;
-                sagernet-dev)     target_base="sing-box/SagerNet/dev" ;;
+                ref1nd-main)      dest="sing-box/reF1nd/main" ;;
+                ref1nd-dev)       dest="sing-box/reF1nd/dev" ;;
+                sagernet-release) dest="sing-box/SagerNet/release" ;;
+                sagernet-dev)     dest="sing-box/SagerNet/dev" ;;
               esac
-              
-              if [[ -n "$target_base" ]]; then
-                mkdir -p "./publish/${target_base}/${platform}"
-                cp "$file" "./publish/${target_base}/${platform}/"
-              fi
+              mkdir -p "./publish/$dest/$platform"
+              cp "$file" "./publish/$dest/$platform/"
             fi
           done
           
-          echo "开始整理 mihomo..."
+          echo "处理 mihomo 产物..."
           for file in ./artifacts/mihomo-*; do
             [[ -f "$file" ]] || continue
             filename=$(basename "$file")
-            
             if [[ "$filename" =~ mihomo-([^-]+)-(.+)\.(tar\.gz|upx|exe) ]]; then
               variant="${BASH_REMATCH[1]}"
               platform="${BASH_REMATCH[2]}"
-              
-              target_base=""
               case "$variant" in
-                meta)  target_base="mihomo/MetaCubeX/meta" ;;
-                alpha) target_base="mihomo/MetaCubeX/alpha" ;;
-                smart) target_base="mihomo/vernesong/smart" ;;
+                meta)  dest="mihomo/MetaCubeX/meta" ;;
+                alpha) dest="mihomo/MetaCubeX/alpha" ;;
+                smart) dest="mihomo/vernesong/smart" ;;
               esac
-              
-              if [[ -n "$target_base" ]]; then
-                mkdir -p "./publish/${target_base}/${platform}"
-                cp "$file" "./publish/${target_base}/${platform}/"
-              fi
+              mkdir -p "./publish/$dest/$platform"
+              cp "$file" "./publish/$dest/$platform/"
             fi
           done
 
       - name: 生成 Checksum 和 README
         run: |
           cd ./publish
-          echo "生成校验和..."
           find . -type f \( -name "*.tar.gz" -o -name "*.exe" -o -name "*.upx" \) -exec sha256sum {} \; > global_checksums.txt
           
           cat > README.md <<EOF
           # Core 核心文件仓库
-
-          自动构建的 sing-box 和 mihomo 核心文件。
-          
-          **最后更新:** $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-
-          ## 目录结构
-          \`\`\`text
-          sing-box/
-          ├── reF1nd/
-          │   ├── main/      # reF1nd-main 分支
-          │   └── dev/       # reF1nd-dev 分支
-          └── SagerNet/
-              ├── release/   # SagerNet 正式版
-              └── dev/       # SagerNet 开发版
-
-          mihomo/
-          ├── MetaCubeX/
-          │   ├── meta/      # MetaCubeX 正式版
-          │   └── alpha/     # MetaCubeX 测试版 (Alpha)
-          └── vernesong/
-              └── smart/     # OpenClash Smart版 (Alpha)
-          \`\`\`
+          自动构建更新。最后更新: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
           EOF
 
-      - name: 强制推送到 Core 分支
+      - name: 推送到 Core 分支
         run: |
           cd ./publish || exit 1
           git init
@@ -436,12 +379,10 @@ jobs:
           git checkout -b core
           git add .
           git commit -m "Update Cores: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-          
-          # 使用 GITHUB_TOKEN 推送
           git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
           git push -f origin core
 
-      - name: 删除旧的工作流运行记录
+      - name: 删除旧记录
         uses: Mattraks/delete-workflow-runs@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
